--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Gerenciamento de Pagamentos",
-  "short_name": "Pagamentos",
+  "name": "Gerenciamento",
+  "short_name": "Gerenciamento",
   "start_url": "./index.html",
   "display": "standalone",
   "background_color": "#f1f5f9",
@@ -10,13 +10,14 @@
     {
       "src": "https://iili.io/fpiTKyF.jpg",
       "sizes": "192x192",
-      "type": "image/jpeg"
+      "type": "image/jpeg",
+      "purpose": "any maskable"
     },
     {
       "src": "https://iili.io/fpiTKyF.jpg",
       "sizes": "512x512",
-      "type": "image/jpeg"
+      "type": "image/jpeg",
+      "purpose": "any maskable"
     }
   ]
 }
-
