--- a/manifest.json
+++ b/manifest.json
@@ -11,13 +11,13 @@
       "src": "https://iili.io/fpiTKyF.jpg",
       "sizes": "192x192",
       "type": "image/jpeg",
-      "purpose": "any maskable"
+      "purpose": "any"
     },
     {
       "src": "https://iili.io/fpiTKyF.jpg",
       "sizes": "512x512",
       "type": "image/jpeg",
-      "purpose": "any maskable"
+      "purpose": "any"
     }
   ]
 }
