--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "https://iili.io/fpiTKyF.jpg",
+      "src": "https://iili.io/fy7S4jf.jpg",
       "sizes": "192x192",
       "type": "image/jpeg",
       "purpose": "any"
     },
     {
-      "src": "https://iili.io/fpiTKyF.jpg",
+      "src": "https://iili.io/fy7S4jf.jpg",
       "sizes": "512x512",
       "type": "image/jpeg",
       "purpose": "any"
