--- a/manifest.json
+++ b/manifest.json
@@ -8,13 +8,13 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "https://iili.io/fy7S4jf.jpg",
+      "src": "https://iili.io/fyYM2Lu.jpg",
       "sizes": "192x192",
       "type": "image/jpeg",
       "purpose": "any maskable"
     },
     {
-      "src": "https://iili.io/fy7S4jf.jpg",
+      "src": "https://iili.io/fyYM2Lu.jpg",
       "sizes": "512x512",
       "type": "image/jpeg",
       "purpose": "any maskable"
